--- a/machine.html
+++ b/machine.html
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
+<h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Software Engineer Machine Learning (m/f/d) at 
 riskmethods.</p>
@@ -129,7 +129,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/o9aaafwn'>Numbrs Personal Finance AG Careers - Machine Learning Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/o9aaafwn'>Numbrs Personal Finance AG Careers - Machine Learning Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -171,7 +171,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://advertima.join.com/jobs/261690-computer-vision-and-machine-learning-engineer-m-f-in-tech-startup-zh-sg'>Computer Vision & Machine Learning Engineer (m/f) in Tech-Startup</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://advertima.join.com/jobs/261690-computer-vision-and-machine-learning-engineer-m-f-in-tech-startup-zh-sg'>Computer Vision & Machine Learning Engineer (m/f) in Tech-Startup</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Advertima AG has a job opening for Computer Vision & Machine Learning 
 Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p>
@@ -211,7 +211,7 @@ team at Vimeo is building AI-driven tools to help anyone who wants to make a?...
 <p><span class="badge badge-light">Lesser Poland Voivodeship, Poland</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/jumio-corporation/job/oVqrafwG'>Jumio Corporation Careers - Machine Learning/ AI Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/jumio-corporation/job/oVqrafwG'>Jumio Corporation Careers - Machine Learning/ AI Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Description. Machine Learning / Artificial Intelligence Engineer. Are you ready for 
 a career change to somewhere where you can really make a difference,?...</p>
@@ -283,7 +283,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/5jhspkto3ceuz375xqddho796h'>VP, Machine Learning Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/5jhspkto3ceuz375xqddho796h'>VP, Machine Learning Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -311,7 +311,7 @@ or?...</p>
 <p>3 days ago ... As a member of EY's core Tax practice, you'll develop a deep tax technical 
 knowledge and outstanding database, data analytics and programming skills.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/featurespace/jobs/1783455'>Job Application for Machine Learning Engineer US at Featurespace</a></h5> 
+<h5><a href='https://boards.greenhouse.io/featurespace/jobs/1783455'>Job Application for Machine Learning Engineer US at Featurespace</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
