--- a/deep-learning.html
+++ b/deep-learning.html
@@ -82,7 +82,7 @@ and Computer Vision to join us in our commitment to improve the quality of care?
 Vision / Computational geometry. GIT version control (good knowledge). English
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691950514-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691950514-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -246,7 +246,7 @@ text?...</p>
 <p>19 hours ago ... Computer Vision/Deep Learning Intern. Singapore, Singapore. Advanced 
 Engineering ? AM - AV Engineering Software - Machine Learning. Intern?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aptiv-mobility/07e59f03-eafe-425e-b385-0dcc0f858a2a'>Aptiv-Mobility - Computer Vision/Deep Learning Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/aptiv-mobility/07e59f03-eafe-425e-b385-0dcc0f858a2a'>Aptiv-Mobility - Computer Vision/Deep Learning Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... GANs & domain shift: Use Generative Adversarial Networks to overcome the 
 domain shift between simulated and real data, as well as different weather, 
@@ -306,7 +306,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-05-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/e4nb417rhzs99yyy4c5eiewohc'>Executive Director, Deep Learning Data Scientist ($300k - $500k) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/e4nb417rhzs99yyy4c5eiewohc'>Executive Director, Deep Learning Data Scientist ($300k - $500k) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-05-21</p>
 <hr/>
@@ -320,7 +320,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">Hsinchu</span></p>
 <p>Posted on: 2019-05-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skydio/290f8333-6487-4097-8b78-f9a5b313f6b8'>Skydio - Deep Learning Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/skydio/290f8333-6487-4097-8b78-f9a5b313f6b8'>Skydio - Deep Learning Research Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
@@ -345,7 +345,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p>Apr 24, 2019 ... Paid travel to top research and developer conferences. Contributing to the open-
 source and research community is a fundamental part of your role. Competitive?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/whisperai/jobs/4259777002'>Job Application for Firmware Engineer for Deep Learning Hearing ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/whisperai/jobs/4259777002'>Job Application for Firmware Engineer for Deep Learning Hearing ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... We're looking for firmware engineers to build the future of hearing instruments 
 and take on significant leadership and responsibility at a fast-growing startup.</p>
@@ -392,7 +392,7 @@ Project?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -412,7 +412,7 @@ Project?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/matterport/179dcc62-57ec-40d2-a984-19ae8b8e0d50'>Matterport - Principal Deep Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/matterport/179dcc62-57ec-40d2-a984-19ae8b8e0d50'>Matterport - Principal Deep Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -420,7 +420,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/deepgenomics/3160c2c8-0414-457a-891d-c41b54c80dfe'>Deep Genomics - Scientist ? Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/deepgenomics/3160c2c8-0414-457a-891d-c41b54c80dfe'>Deep Genomics - Scientist ? Machine Learning</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -456,7 +456,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='http://thehive.ai/'>The Complete Deep-Learning Toolkit | Hive</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://thehive.ai/'>The Complete Deep-Learning Toolkit | Hive</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
